--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port = 8081
+start.port = ${server.port}
 management.endpoints.web.exposure.include=health,info,env,beans,auditevents,loggers,httptrace,mappings,metrics
-controller.message = Controller Message
+start.controller.message = Controller Message
+start.controller.log = Controller Log
 
